--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  firebase_auth: ^0.15.2
+  cloud_firestore: ^0.13.3
+  cached_network_image: ^2.5.0
+  provider: ^3.2.0
+  shared_preferences: ^0.5.6+3
+  random_string: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
